syntax = "proto3";

package qcm.msg.model;

import "google/protobuf/timestamp.proto";

message Song {
  int64 id = 1;
  string native_id = 2;
  int64 library_id = 3;
  string name = 4;
  string sort_name = 5;
  int64 album_id = 6;
  int32 track_number = 7;
  int32 disc_number = 8;
  double duration = 9;
  bool can_play = 10;
  google.protobuf.Timestamp publish_time = 11;
  double popularity = 12;
  repeated string tags = 13;
}

message Radio {
  int64 id = 1;
  string native_id = 2;
  int64 library_id = 3;
  string name = 4;
  string sort_name = 5;
  string description = 6;
  int32 program_count = 7;
}

message Program {
  int64 id = 1;
  string native_id = 2;
  int64 library_id = 3;
  string name = 4;
  string sort_name = 5;
  string description = 6;
  google.protobuf.Timestamp duration = 7;
  string cover_url = 8;
  string song_id = 9;
  int32 serial_number = 11;
  string radio_id = 12;
}

message Mix {
  int64 id = 1;
  string name = 4;
  string sort_name = 5;
  int32 track_count = 6;
  string description = 8;
  google.protobuf.Timestamp create_at = 10;
  google.protobuf.Timestamp update_at = 11;
}

message Library {
  int64 library_id = 1;
  string name = 2;
  int64 provider_id = 3;
  string native_id = 4;
  google.protobuf.Timestamp edit_time = 5;
}

message Artist {
  int64 id = 1;
  string native_id = 2;
  string name = 3;
  string sort_name = 4;
  int64 library_id = 5;
  string description = 6;
  int32 album_count = 7;
  int32 music_count = 8;
  google.protobuf.Timestamp added_at = 9;
  google.protobuf.Timestamp update_at = 10;
}

enum AlbumType {
  ALBUM_TYPE_UNSPECIFIED = 0;
  ALBUM_TYPE_ALBUM = 1;
  ALBUM_TYPE_EP = 2;
  ALBUM_TYPE_SINGLE = 3;
  ALBUM_TYPE_SOUNDTRACK = 4;
  ALBUM_TYPE_COMPILATION = 5;
  ALBUM_TYPE_LIVE = 6;
}

message Album {
  int64 id = 1;
  string native_id = 2;
  int64 library_id = 3;
  string name = 4;
  string sort_name = 5;
  AlbumType type = 6;
  int64 duration = 7;
  int32 track_count = 8;
  int32 disc_count = 9;
  string description = 10;
  string company = 12;
  string language = 13;
  google.protobuf.Timestamp publish_time = 14;
  google.protobuf.Timestamp added_at = 15;
  google.protobuf.Timestamp update_at = 16;
}

enum ItemType {
  ITEM_TYPE_UNSPECIFIED = 0;
  ITEM_TYPE_PROVIDER = 1;
  ITEM_TYPE_LIBRARY = 2;

  ITEM_TYPE_ALBUM = 51;
  ITEM_TYPE_ALBUMARTIST = 52;
  ITEM_TYPE_ARTIST = 53;
  ITEM_TYPE_MIX = 54;
  ITEM_TYPE_RADIO = 55;

  ITEM_TYPE_SONG = 101;
  ITEM_TYPE_PROGRAM = 102;
}

message UsernameAuth {
  string username = 1;
  string pw = 2;
}

message PhoneAuth {
  string phone = 1;
  string pw = 2;
}

message EmailAuth {
  string email = 1;
  string pw = 2;
}

message QrAuth { string key = 1; }

enum AuthType {
  AUTH_TYPE_USERNAME_AUTH = 0;
  AUTH_TYPE_PHONE_AUTH = 1;
  AUTH_TYPE_EMAIL_AUTH = 2;
  AUTH_TYPE_QR_AUTH = 3;
}

message AuthInfo {
  string server_url = 1;
  oneof method {
    UsernameAuth username = 2;
    PhoneAuth phone = 3;
    EmailAuth email = 4;
    QrAuth qr = 5;
  }
}

message ProviderMeta {
  string type_name = 1;
  string svg = 2;
  bool mutable = 3;
  bool is_script = 4;
  bool has_server_url = 5;
  repeated int32 auth_types = 6;
}

enum SyncState {
  SYNC_STATE_FINISHED = 0;
  SYNC_STATE_SYNCING = 1;
  SYNC_STATE_NOT_AUTH = 2;
  SYNC_STATE_NETWORK_ERROR = 3;
  SYNC_STATE_UNKNOWN_ERROR = 4;
}

message ProviderSyncStatus {
  int64 id = 1;
  SyncState state = 2;
  int32 album = 3;
  int32 artist = 4;
  int32 song = 5;
}

message ProviderStatus {
  int64 id = 1;
  string name = 2;
  string type_name = 3;
  ProviderSyncStatus sync_status = 4;
  AuthInfo auth_info = 5;
  repeated Library libraries = 6;
}

message SubtitleItem {
  int64 start = 1;
  int64 end = 2;
  string text = 3;
}
message Subtitle { repeated SubtitleItem items = 1; }

enum AuthResult {
  Uinit = 0;
  Ok = 1;
  Failed = 2;
  WrongPassword = 3;
  NoSuchUsername = 4;
  NoSuchEmail = 5;
  NoSuchPhone = 6;
  QrExpired = 20;
  QrWaitScan = 21;
  QrWaitComform = 22;
}

enum AlbumSort {
  ALBUM_SORT_TITLE = 0;
  ALBUM_SORT_SORT_TITLE = 1;
  ALBUM_SORT_YEAR = 2;
  ALBUM_SORT_PUBLISH_TIME = 3;
  ALBUM_SORT_TRACK_COUNT = 4;
  ALBUM_SORT_ADDED_TIME = 5;
  // LAST_PLAY = 5;
}

enum ArtistSort {
  ARTIST_SORT_NAME = 0;
  ARTIST_SORT_SORT_NAME = 1;
  ARTIST_SORT_ALBUM_COUNT = 2;
  ARTIST_SORT_MUSIC_COUNT = 3;
}

enum SongSort {
  SONG_SORT_TRACK_NUMBER = 0;
  SONG_SORT_TITLE = 1;
  SONG_SORT_SORT_TITLE = 2;
  SONG_SORT_PUBLISH_TIME = 3;
  SONG_SORT_DURATION = 4;
  SONG_SORT_POPULARITY = 5;
}